--- a/UdemySpaProject/src/app/instructor/coursecreation/coursecreation.component.html
+++ b/UdemySpaProject/src/app/instructor/coursecreation/coursecreation.component.html
@@ -2,7 +2,7 @@
   <app-courseheader></app-courseheader>
   <div class="row gap-2 container-fluid">
     <app-courseplaning class="col-3"></app-courseplaning>
-    <span [ngSwitch]="SelectedComponent" class="col-7 myborder">
+    <span [ngSwitch]="SelectedComponent" class="col-7 myborder mt-3">
       <app-courserequirment *ngSwitchCase="1"></app-courserequirment>
       <app-curriculm *ngSwitchCase="2"></app-curriculm>
       <app-landingpage *ngSwitchCase="3"></app-landingpage>
