--- a/UdemySpaProject/src/app/instructor/courseheader/courseheader.component.html
+++ b/UdemySpaProject/src/app/instructor/courseheader/courseheader.component.html
@@ -6,11 +6,7 @@
     content uploaded
   </div>
   <div class="d-flex gap-3 me-2 align-items-center">
-    <button
-      class="btn btn-secondary"
-      [disabled]="IsNotValidToSave"
-      (click)="SaveCourseDetails()"
-    >
+    <button class="btn btn-secondary" (click)="FireActionSaveClick()">
       Save
     </button>
     <div><i class="fa-solid fa-gear h3 mt-2"></i></div>
