--- a/UdemySpaProject/src/app/instructor/landingpage/landingpage.component.html
+++ b/UdemySpaProject/src/app/instructor/landingpage/landingpage.component.html
@@ -75,12 +75,19 @@
         <div class="row justify-content-around gap-2">
           <div
             style="background-color: #c1d4de; height: 250px"
-            class="col-12 col-lg-5 d-flex justify-content-center align-items-center"
+            class="p-0 col-12 col-lg-5 d-flex justify-content-center align-items-center"
           >
             <img
-              style="height: 70%; width: 80%"
-              src="../../../assets/defaultCourseImage/placeholder.jpg"
-              alt=""
+              #img
+              [ngStyle]="{
+                height: CourseImage == null ? '95%' : '100%',
+                width: CourseImage == null ? '97%' : '100%'
+              }"
+              [src]="
+                CourseImage == null
+                  ? '../../../assets/defaultCourseImage/placeholder.jpg'
+                  : CourseImage
+              "
             />
           </div>
           <div class="col-12 col-lg-6 d-flex justify-content-start flex-column">
@@ -93,7 +100,7 @@
               <input
                 type="file"
                 class="form-control"
-                (change)="SelectImage($event)"
+                (change)="SelectImage($event, img)"
                 id="image"
                 name="Image"
               />
@@ -107,14 +114,23 @@
         <p class="fw-bold text-start mt-2">Promotional video</p>
         <div class="row justify-content-around gap-2">
           <div
+            [ngClass]="{ 'h-100': videoUrl != null }"
             style="background-color: #c1d4de; height: 250px"
-            class="col-12 col-lg-5 d-flex justify-content-center align-items-center"
+            class="h-100 p-0 col-12 col-lg-5 d-flex justify-content-center align-items-center"
           >
             <img
-              style="height: 70%; width: 80%"
+              *ngIf="videoUrl == null"
+              style="height: 95%; width: 97%"
               src="../../../assets/defaultCourseImage/placeholder.jpg"
               alt=""
             />
+            <video
+              *ngIf="videoUrl != null"
+              width="100%"
+              height="100%"
+              [src]="videoUrl"
+              controls
+            ></video>
           </div>
           <div class="col-12 col-lg-6 d-flex justify-content-start flex-column">
             <div class="mb-3">
