--- a/UdemySpaProject/src/app/instructor/courseheader/courseheader.component.html
+++ b/UdemySpaProject/src/app/instructor/courseheader/courseheader.component.html
@@ -9,6 +9,6 @@
     <button class="btn btn-secondary" (click)="FireActionSaveClick()">
       Save
     </button>
-    <div><i class="fa-solid fa-gear h3 mt-2"></i></div>
+    <i class="fa-solid fa-trash h3 mt-2" (click)="DeleteCourse()"></i>
   </div>
 </div>
